rust/fspec-tui/tests/snapshots/app_with_mock_backend_repl__repl_after_first_chunk_rpc012.snap
---
source: fspec-tui/tests/app_with_mock_backend_repl.rs
expression: rows
---
- " #1 (AUTH-002): Agent                                        tokens: 0↓ 0↑ [0%] "
- " [ Board View ]  │ [ #1 ● ]                      [ New Agent ]  [ Close Agent ] "
- "● Hello!                                                                        "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- "                                                                                "
- " > Type a message... 'Ctrl+J' newline, 'Shift+↑/↓' history, 'Shift+←/→' session "
