rust/fspec-tui/tests/snapshots/app_with_mock_backend_repl__repl_bootstrap_rpc012.snap
---
source: fspec-tui/tests/app_with_mock_backend_repl.rs
expression: rows
---
- ┌──────────────────────────────────────────────────────────────────────────────┐
- "│ ┏┓┏┓┏┓┏┓┏┓  Checkpoints: None                                                │"
- │ ┣ ┗┓┃┃┣ ┃                                                                    │
- │ ┻ ┗┛┣┛┗┛┗┛  ──────────────────────────────────────────────────────────────── │
- │   v0.10.8    Kanban Tools Settings Help                                      │
- ├──────────────────────────────────────────────────────────────────────────────┤
- │                                                                              │
- │                                                                              │
- │                            No work unit selected                             │
- │                                                                              │
- │                                                                              │
- ├───────────┬───────────┬──────────┬──────────┬──────────┬──────────┬──────────┤
- │BACKLOG    │SPECIFYING │TESTING   │IMPLEMENTI│VALIDATING│DONE      │BLOCKED   │
- ├───────────┼───────────┼──────────┼──────────┼──────────┼──────────┼──────────┤
- │           │           │          │AUTH-002  │          │AUTH-001  │          │
- │           │           │          │          │          │          │          │
- │           │           │          │          │          │          │          │
- │           │           │          │          │          │          │          │
- │           │           │          │          │          │          │          │
- │           │           │          │          │          │          │          │
- │           │           │          │          │          │          │          │
- ├───────────┴───────────┴──────────┴──────────┴──────────┴──────────┴──────────┤
- "│← → Cycle Columns → menu items → chips ◆ ↑↓ Work Units ◆ [ Priority Up ◆ ] Pri│"
- └──────────────────────────────────────────────────────────────────────────────┘
